# QProjects_jjkhl

./: CMakeLists.txt  ChatMsgType.h  changepassword.h  filecntdlg.cpp  filecntdlg.h  filecntdlg.ui  filesrvdlg.h  filesrvdlg.ui  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  onlineClients.h  registermysql.h  server.cpp  server.h
Debug/myWeixin_autogen/: mocs_compilation.cpp
Debug/myWeixin_autogen/EWIEGA46WW/: qrc_pictures.cpp
Debug/myWeixin_autogen/include/: ui_changepassword.h  ui_filecntdlg.h  ui_filesrvdlg.h  ui_logindialog.h  ui_mainwindow.h  ui_registermysql.h
